# CGE

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: CGE.cpp.A619BC2CBD1AD045.idx  CGE.h.A37F1DE54462E45B.idx  _fixes.hpp.36983E045B7A31AF.idx  _vectorize.hpp.07750CA3F848D8B8.idx  common.hpp.3B8F813F7AB880A2.idx  compute_common.hpp.28D30C27F3187A85.idx  compute_vector_decl.hpp.6279A07B2E19642F.idx  compute_vector_relational.hpp.1BA03283BA1B1FEA.idx  constants.hpp.CB3E664E736EBE17.idx  constants.inl.A781BE31E316CDB4.idx  context.c.9E41890137360070.idx  dual_quaternion.hpp.44CD303F08537A53.idx  dual_quaternion.inl.FFB846ADE1777324.idx  egl_context.c.76A182D55F0E99B6.idx  epsilon.hpp.942CA72E189F3CA1.idx  epsilon.inl.BC6C039A28461725.idx  exponential.hpp.447C0871C60B71C6.idx  func_common.inl.FCE19E4C8B2923FA.idx  func_exponential.inl.011EEEF392D0FF6D.idx  func_geometric.inl.04C195013D7C4B11.idx  func_integer.inl.4554A1DB68943579.idx  func_matrix.inl.9BFE97FE23872990.idx  func_packing.inl.D962C0CA70F320B5.idx  func_trigonometric.inl.F277EA3F26C32C52.idx  func_vector_relational.inl.B420247D2072EB67.idx  fwd.hpp.EE9812FC4C4EBA1F.idx  geometric.hpp.3F1C1645D1C40163.idx  gl.c.449FAEC18A6E11B7.idx  gl.h.7DE5094F2C7A485B.idx  glfw3.h.44E0605E0991CA64.idx  glfw3native.h.22B86A2B9C0E1593.idx  glm.cpp.37F4567B4085FE3A.idx  glm.hpp.3B095BAD3134C3BD.idx  init.c.617D7DF41589C1EA.idx  input.c.F2A527A15D6CED71.idx  integer.hpp.E5AEC38399C43A45.idx  internal.h.174C6344468C2629.idx  khrplatform.h.297258D05136A2F1.idx  main.cpp.389B68F7E4300E65.idx  mappings.h.D066A69327D532FA.idx  (+184 more)
examples/: CMakeLists.txt
examples/triangle/: CMakeLists.txt  main.cpp
examples/triangle/shaders/: shader.h
framework/: CMakeLists.txt
framework/CGE/: CGE.cpp  CGE.h  CMakeLists.txt
framework/entity/: entity.cpp  entity.h
